--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <nav>
         <div class="logo">
-          <h2>Mary<span class="color-orange">r</span>y</h2>
+          <h2>Ma<span class="color-orange">r</span>y</h2>
         </div>
         <ul class="menu">
           <li><a href="">Portfolio</a></li>
